Fix heading overflows

--- a/src/sass/_typography.scss
+++ b/src/sass/_typography.scss
@@ -2,17 +2,16 @@ $font-header: #bea67c;
 
 @font-face {
   @font-face {
-
-    font-family: 'fontello';
-    src: url('../vendor/font/fontello.eot?67757242');
-    src: url('../vendor/font/fontello.eot?67757242#iefix') format('embedded-opentype'),
-      url('../vendor/font/fontello.woff2?67757242') format('woff2'),
-      url('../vendor/font/fontello.woff?67757242') format('woff'),
-      url('../vendor/font/fontello.ttf?67757242') format('truetype'),
-      url('../vendor/font/fontello.svg?67757242#fontello') format('svg');
+    font-family: "fontello";
+    src: url("../vendor/font/fontello.eot?67757242");
+    src: url("../vendor/font/fontello.eot?67757242#iefix")
+        format("embedded-opentype"),
+      url("../vendor/font/fontello.woff2?67757242") format("woff2"),
+      url("../vendor/font/fontello.woff?67757242") format("woff"),
+      url("../vendor/font/fontello.ttf?67757242") format("truetype"),
+      url("../vendor/font/fontello.svg?67757242#fontello") format("svg");
     font-weight: normal;
     font-style: normal;
-  
   }
 }
 
@@ -34,3 +33,8 @@ $font-header: #bea67c;
   margin: auto;
 }
 
+h1,
+h2,
+h3 {
+  overflow: hidden;
+}
